After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789782 - media-keys: Fix custom binding command changes not getting applied
media-keys: Fix custom binding command changes not getting applied
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: media-keys
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2017-11-01 17:56 UTC by Rui Matos
Modified: 2017-11-02 14:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
media-keys: Fix custom binding command changes not getting applied (2.18 KB, patch)
2017-11-01 17:56 UTC, Rui Matos
none Details | Review
media-keys: Fix custom binding command changes not getting applied (2.58 KB, patch)
2017-11-01 18:31 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2017-11-01 17:56:11 UTC
This is a regression from commit
8966dd939641ecde2d75aeb291634630d2bea148.
Comment 1 Rui Matos 2017-11-01 17:56:15 UTC
Created attachment 362769 [details] [review]
media-keys: Fix custom binding command changes not getting applied
Comment 2 Rui Matos 2017-11-01 18:31:45 UTC
Created attachment 362772 [details] [review]
media-keys: Fix custom binding command changes not getting applied

--

Forgot to revert the gsettings changed signal connection too.
Comment 3 Rui Matos 2017-11-02 14:00:56 UTC
Attachment 362772 [details] pushed as 8778c2d - media-keys: Fix custom binding command changes not getting applied