media-keys: Fix custom binding command changes not getting applied

This is a regression from commit
8966dd939641ecde2d75aeb291634630d2bea148.

https://bugzilla.gnome.org/show_bug.cgi?id=789782